--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-  <a href="Revlver Duel Enhanced.html"> </a> 
+  <a href="Revolver Duel Enhanced.html"> Revolver Dueller </a> 
 </body>
 </html>
